# api/dinoApi.py
@@ -11,11 +11,16 @@ def get_timestamp():
 
 
 def read_all():
+    print("came here")
     return getJsonList(dinosaurModel.getAll())
 
 
 def readById(id):
     return getJsonList(dinosaurModel.searchById(id))
+
+
+def search(property, value):
+    return getJsonList(dinosaurModel.searchByProperty(property, value))
 
 
 def update(id, dino):
